tests/invalid/typeclass_missing_mode_2.err_exp
typeclass_missing_mode_2.m:015: Error: [38;5;203mno mode declaration[39;49m for method predicate
typeclass_missing_mode_2.m:015:   [38;5;87m`p'/1.[39;49m
typeclass_missing_mode_2.m:023: In instance declaration for `c(int)':
typeclass_missing_mode_2.m:023:   error: the type class [38;5;203mhas no predicate method[39;49m
typeclass_missing_mode_2.m:023:   named [38;5;87m`p'/1.[39;49m
